--- a/Find All Here/Views/LoginView.xaml
+++ b/Find All Here/Views/LoginView.xaml
@@ -5,10 +5,12 @@
     xmlns:find_all_here="clr-namespace:Find_All_Here"
     x:DataType="find_all_here:Shell"
     x:Class="Find_All_Here.Views.LoginView"
+    xmlns:local="clr-namespace:Find_All_Here.ViewModels"
     BackgroundColor="{StaticResource btn-primary}">
     <ScrollView>
         <StackLayout>
             <ActivityIndicator
+                x:DataType="local:LoginViewModel"
                 IsRunning="{Binding IsRunningTxt}"
                 IsVisible="{Binding IsVisibleTxt}"
                 Color="{StaticResource lbl-primary}"
@@ -69,6 +71,7 @@
                                     Margin="0,-10,0,0"
                                     MaxLength="320"
                                     FontSize="16"
+                                    x:DataType="local:LoginViewModel"
                                     TextColor="{StaticResource lbl-primary}"
                                     Text="{Binding EmailTxt, Mode=TwoWay}"
                                     IsEnabled="{Binding IsEnabledTxt}"
@@ -90,6 +93,7 @@
                                     Margin="0,-10,0,0"
                                     IsPassword="True"
                                     FontSize="16"
+                                    x:DataType="local:LoginViewModel"
                                     Text="{Binding PasswordTxt, Mode=TwoWay}"
                                     IsEnabled="{Binding IsEnabledTxt}"
                                     TextColor="{StaticResource lbl-primary}"
@@ -114,6 +118,7 @@
                             BackgroundColor="{StaticResource btn-success}"
                             TextColor="{StaticResource lbl-primary}"
                             CornerRadius="10"
+                            x:DataType="local:LoginViewModel"
                             Command="{Binding LoginCommand}"
                             IsEnabled="{Binding IsEnabledTxt}" />
                         <Button Grid.Row="6"
@@ -124,6 +129,7 @@
                             BackgroundColor="{StaticResource btn-primary-outline}"
                             TextColor="{StaticResource btn-primary}"
                             CornerRadius="10"
+                            x:DataType="local:LoginViewModel"
                             IsEnabled="{Binding IsEnabledTxt}"
                             Clicked="SignUp_Clicked" />
                         <Label Grid.Row="7"
