--- a/Find All Here/Views/RegisterView.xaml
+++ b/Find All Here/Views/RegisterView.xaml
@@ -78,7 +78,7 @@
                             Margin="0,-5,0,0"
                             Padding="10,0"
                             CornerRadius="5"
-                            Background="{StaticResource bg-outline}">
+                            BackgroundColor="{StaticResource bg-outline}">
                             <StackLayout Margin="0" Padding="0">
                                 <Label 
                                     Margin="0,5,0,0"
@@ -101,7 +101,7 @@
                             Margin="0"
                             Padding="10,0"
                             CornerRadius="5"
-                            Background="{StaticResource bg-outline}">
+                            BackgroundColor="{StaticResource bg-outline}">
                             <StackLayout Margin="0" Padding="0">
                                 <Label 
                                     Margin="0,5,0,0"
@@ -123,7 +123,7 @@
                             Margin="0"
                             Padding="10,0"
                             CornerRadius="5"
-                            Background="{StaticResource bg-outline}">
+                            BackgroundColor="{StaticResource bg-outline}">
                             <StackLayout Margin="0" Padding="0">
                                 <Label 
                                     Margin="0,5,0,0"
@@ -143,10 +143,10 @@
                             </StackLayout>
                         </Frame>
                         <Frame Grid.Row="5"
-                               Margin="0"
-                               Padding="10,0"
-                               CornerRadius="5"
-                               Background="{StaticResource bg-outline}">
+                            Margin="0"
+                            Padding="10,0"
+                            CornerRadius="5"
+                            BackgroundColor="{StaticResource bg-outline}">
                             <StackLayout Margin="0" Padding="0">
                                 <Label 
                                     Margin="0,5,0,0"
@@ -168,7 +168,7 @@
                             Margin="0"
                             Padding="10,0"
                             CornerRadius="5"
-                            Background="{StaticResource bg-outline}">
+                            BackgroundColor="{StaticResource bg-outline}">
                             <StackLayout>
                                 <Label Grid.ColumnSpan="3" 
                                     Margin="0,5,0,0"
@@ -233,7 +233,7 @@
                             Margin="0,-5,0,0"
                             Padding="10,0"
                             CornerRadius="5"
-                            Background="{StaticResource bg-outline}">
+                            BackgroundColor="{StaticResource bg-outline}">
                             <StackLayout>
                                 <Label 
                                     Margin="0,5,0,0"
@@ -254,7 +254,7 @@
                         <Frame Grid.Row="9"
                             Padding="10,0"
                             CornerRadius="5"
-                            Background="{StaticResource bg-outline}">
+                            BackgroundColor="{StaticResource bg-outline}">
                             <StackLayout>
                                 <Label 
                                     Margin="0,5,0,0"
@@ -276,7 +276,7 @@
                         <Frame Grid.Row="10"
                             Padding="10,0"
                             CornerRadius="5"
-                            Background="{StaticResource bg-outline}">
+                            BackgroundColor="{StaticResource bg-outline}">
                             <StackLayout>
                                 <Label 
                                     Margin="0,5,0,0"
