--- a/Find All Here/Views/UserConfigView.xaml
+++ b/Find All Here/Views/UserConfigView.xaml
@@ -50,7 +50,7 @@
                             Margin="3"
                             Padding="10,0"
                             CornerRadius="5"
-                            Background="{StaticResource bg-outline}">
+                            BackgroundColor="{StaticResource bg-outline}">
                         <StackLayout Margin="0" Padding="0">
                             <Label 
                                     Margin="0,5,0,0"
@@ -73,7 +73,7 @@
                             Margin="3"
                             Padding="10,0"
                             CornerRadius="5"
-                            Background="{StaticResource bg-outline}">
+                            BackgroundColor="{StaticResource bg-outline}">
                         <StackLayout Margin="0" Padding="0">
                             <Label 
                                     Margin="0,5,0,0"
@@ -96,7 +96,7 @@
                             Margin="3"
                             Padding="10,0"
                             CornerRadius="5"
-                            Background="{StaticResource bg-outline}">
+                            BackgroundColor="{StaticResource bg-outline}">
                         <StackLayout Margin="0" Padding="0">
                             <Label 
                                     Margin="0,5,0,0"
@@ -119,7 +119,7 @@
                             Margin="3"
                             Padding="10,0"
                             CornerRadius="5"
-                            Background="{StaticResource bg-outline}">
+                            BackgroundColor="{StaticResource bg-outline}">
                         <StackLayout Margin="0" Padding="0">
                             <Label 
                                     Margin="0,5,0,0"
@@ -143,7 +143,7 @@
                             Margin="3"
                             Padding="10,0"
                             CornerRadius="5"
-                            Background="{StaticResource bg-outline}">
+                            BackgroundColor="{StaticResource bg-outline}">
                         <StackLayout Margin="0" Padding="0">
                             <Label 
                                     Margin="0,5,0,0"
@@ -167,7 +167,7 @@
                             Margin="3"
                             Padding="10,0"
                             CornerRadius="5"
-                            Background="{StaticResource bg-outline}">
+                            BackgroundColor="{StaticResource bg-outline}">
                         <StackLayout Grid.Row="5" Grid.Column="1">
                             <Label 
                                     Margin="0,5,0,0"
@@ -226,7 +226,7 @@
                             Margin="3"
                             Padding="10,0"
                             CornerRadius="5"
-                            Background="{StaticResource bg-outline}">
+                            BackgroundColor="{StaticResource bg-outline}">
                         <StackLayout Margin="0" Padding="0">
                             <Label 
                                     Margin="0,5,0,0"
@@ -249,7 +249,7 @@
                             Margin="3"
                             Padding="10,0"
                             CornerRadius="5"
-                            Background="{StaticResource bg-outline}">
+                            BackgroundColor="{StaticResource bg-outline}">
                         <StackLayout Margin="0" Padding="0">
                             <Label 
                                     Margin="0,5,0,0"
@@ -272,7 +272,7 @@
                             Margin="3"
                             Padding="10,0"
                             CornerRadius="5"
-                            Background="{StaticResource bg-outline}">
+                            BackgroundColor="{StaticResource bg-outline}">
                         <StackLayout Margin="0" Padding="0">
                             <Label 
                                     Margin="0,5,0,0"
